--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,90 +5,179 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".buttonNavigationActivites.HomeFragment">
-<androidx.constraintlayout.widget.ConstraintLayout
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".buttonNavigationActivites.HomeFragment"
-    android:background="#d2fcfa">
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-    <ImageView
-        android:id="@+id/maountains"
-        android:layout_width="300dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/maountains"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#d2fcfa"
+        tools:context=".buttonNavigationActivites.HomeFragment">
 
-    <ImageView
-        android:id="@+id/mind_icon"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:background="@drawable/mind_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="271dp" />
+        <ImageView
+            android:id="@+id/maountains"
+            android:layout_width="300dp"
+            android:layout_height="220dp"
+            android:layout_marginTop="44dp"
+            android:background="@drawable/maountains"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.531"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/self_awarness_icon"
-        android:layout_width="170dp"
-        android:layout_height="120dp"
-        android:background="@drawable/self_awarness_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <ImageView
+            android:id="@+id/lines"
+            android:layout_width="35dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="340dp"
+            android:background="@drawable/lines"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.904"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/clouds"
-        android:layout_width="170dp"
-        android:layout_height="120dp"
-        android:background="@drawable/clouds"
-        app:layout_constraintEnd_toStartOf="@+id/self_awarness_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="465dp" />
+        <ImageView
+            android:id="@+id/lines3"
+            android:layout_width="220dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="624dp"
+            android:background="@drawable/line3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.018"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/personal_BrandingBtn"
-        android:layout_width="178dp"
-        android:layout_height="54dp"
-        android:background="@drawable/rounded_corners"
-        android:text="Personal-Branding"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.819"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32" />
+        <ImageView
+            android:id="@+id/tree"
+            android:layout_width="30dp"
+            android:layout_height="100dp"
+            android:background="@drawable/tree"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.942"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.711" />
 
-    <Button
-        android:id="@+id/mindMappingBtn"
-        android:layout_width="169dp"
-        android:layout_height="58dp"
-        android:background="@drawable/rounded_corners"
-        android:text="Mind Mapping"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.594" />
+        <ImageView
+            android:id="@+id/mind_icon"
+            android:layout_width="270dp"
+            android:layout_height="130dp"
+            android:layout_marginBottom="72dp"
+            android:background="@drawable/mind_icon"
+            app:layout_constraintBottom_toTopOf="@+id/self_awarness_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.418"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/selfAwarenessBtn"
-        android:layout_width="151dp"
-        android:layout_height="47dp"
-        android:background="@drawable/rounded_corners"
-        android:text="Self awarness"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.838"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.879" />
+        <ImageView
+            android:id="@+id/self_awarness_icon"
+            android:layout_width="160dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="120dp"
+            android:background="@drawable/self_awarness_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.589"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/line2"
+            android:layout_width="50dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="324dp"
+            android:background="@drawable/line2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/line4"
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:layout_marginBottom="488dp"
+            android:background="@drawable/line4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/line8"
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:layout_marginBottom="172dp"
+            android:background="@drawable/line4"
+            android:rotation="180"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.825"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/line"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="260dp"
+            android:background="@drawable/line4"
+            android:rotation="90"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.825"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/clouds"
+            android:layout_width="100dp"
+            android:layout_height="70dp"
+            android:background="@drawable/clouds"
+            app:layout_constraintBottom_toBottomOf="@+id/self_awarness_icon"
+            app:layout_constraintEnd_toStartOf="@+id/self_awarness_icon"
+            app:layout_constraintHorizontal_bias="0.625"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/self_awarness_icon" />
+
+        <Button
+            android:id="@+id/personal_BrandingBtn"
+            android:layout_width="178dp"
+            android:layout_height="54dp"
+            android:background="@drawable/rounded_corner_locked"
+            android:text="Personal-Branding"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.819"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.345" />
+
+        <Button
+            android:id="@+id/mindMappingBtn"
+            android:layout_width="169dp"
+            android:layout_height="58dp"
+            android:background="@drawable/rounded_corners"
+            android:text="Mind Mapping"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.533"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.594" />
+
+        <Button
+            android:id="@+id/selfAwarenessBtn"
+            android:layout_width="151dp"
+            android:layout_height="47dp"
+            android:background="@drawable/rounded_corners"
+            android:text="Self awarness"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.838"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.865" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
