--- a/app/src/main/res/layout/fragment_lesson2.xml
+++ b/app/src/main/res/layout/fragment_lesson2.xml
@@ -97,10 +97,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="@+id/lessonName_textView"
-            app:layout_constraintStart_toStartOf="@+id/lessonName_textView"
-            app:layout_constraintTop_toBottomOf="@+id/lessonName_textView">
-
+            app:layout_constraintBottom_toTopOf="@+id/lessonSubtitle_textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            >
             <TextView
                 android:id="@+id/progressOne_textView"
                 android:layout_width="32dp"
